infa/k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
  labels:
    app: event-bus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
      - name: event-bus
        image: event-bus-image
        ports:
          - containerPort: 4000
      # - name: mongodb
      #   image: mongo
      #   ports:
      #     - containerPort: 27017
---

# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: mcd-depl
#   labels:
#     app: mcd
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: mcd
#   template:
#     metadata:
#       labels:
#         app: mcd
#     spec:
#       containers:
#       - name: mcd
#         image: mcd-image
#         ports:
#           - containerPort: 4001
#       - name: mongodb
#         image: mongo
#         ports:
#           - containerPort: 27017
# ---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mpe-depl
  labels:
    app: mpe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mpe
  template:
    metadata:
      labels:
        app: mpe
    spec:
      containers:
      - name: mpe
        image: mpe-image
        ports:
          - containerPort: 4002
      # - name: mongodb
      #   image: mongo
      #   ports:
      #     - containerPort: 27017
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mtv-depl
  labels:
    app: mtv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mtv
  template:
    metadata:
      labels:
        app: mtv
    spec:
      containers:
      - name: mtv
        image: mtv-image
        ports:
          - containerPort: 4003
      # - name: mongodb
      #   image: mongo
      #   ports:
      #     - containerPort: 27017
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-depl
  labels:
    app: users
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      # volumes:
      #   - name: db-storage
      #     persistentVolumeClaim:
      #       claimName: users-db-claim
      containers:
        - name: users
          image: users-image
          ports:
            - containerPort: 4004
        # - name: mongodb
        #   image: mongo
        #   ports:
        #     - containerPort: 27017
          # volumeMounts:
          #   - mountPath: /data/db
          #     name: db-storage
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracks-depl
  labels:
    app: tracks
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tracks
  template:
    metadata:
      labels:
        app: tracks
    spec:
      containers:
        - name: tracks
          image: tracks-image
          ports:
            - containerPort: 4005
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sms-depl
  labels:
    app: sms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sms
  template:
    metadata:
      labels:
        app: sms
    spec:
      volumes:
        - name: sms-storage
          persistentVolumeClaim:
            claimName: sms-pv-claim
      containers:
        - name: sms
          image: sms-image
          ports:
            - containerPort: 4006
          volumeMounts:
            - mountPath: "/app/public/uploads"
              name: sms-storage
        # - name: mongodb
        #   image: mongo
        #   ports:
        #     - containerPort: 27017
