infa/k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-bus-service
spec:
  selector:
    app: event-bus
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000

---

apiVersion: v1
kind: Service
metadata:
  name: mcd-service
spec:
  selector:
    app: mcd
  ports:
    - protocol: TCP
      port: 4001
      targetPort: 4001

---

apiVersion: v1
kind: Service
metadata:
  name: mpe-service
spec:
  selector:
    app: mpe
  ports:
    - protocol: TCP
      port: 4002
      targetPort: 4002


---

apiVersion: v1
kind: Service
metadata:
  name: mtv-service
spec:
  selector:
    app: mtv
  ports:
    - protocol: TCP
      port: 4003
      targetPort: 4003


---

apiVersion: v1
kind: Service
metadata:
  name: users-service
spec:
  selector:
    app: users
  ports:
    - protocol: TCP
      port: 4004
      targetPort: 4004

---

apiVersion: v1
kind: Service
metadata:
  name: tracks-service
spec:
  selector:
    app: tracks
  ports:
    - protocol: TCP
      port: 4005
      targetPort: 4005
