infa/k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-myservice
  annotations:
    # use the shared ingress-nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /api/playlists
        pathType: Prefix
        backend:
          serviceName: mpe-service
          servicePort: 4002
      - path: /api/events
        pathType: Prefix
        backend:
          serviceName: mtv-service
          servicePort: 4003
      - path: /api/tracks
        pathType: Prefix
        backend:
          serviceName: tracks-service
          servicePort: 4005
      - path: /api/*
        backend:
          serviceName: users-service
          servicePort: 4004
